# inversion-vectors

./: .gitmodules  README.md  main_umda_inv.py  main_umda_permus.py  pyproject.toml  transformations.py  umda.py
