[project]
name = "inversion-vectors"
version = "0.1.0"
description = "Source code for the paper 'A Unified View of Bijective Transformations for Optimizing Permutation Problems' (ECAI 2025)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
]
